@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300014, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300017, CPAN::Meta::Converter version 2.120921'
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -14,5 +14,6 @@ meta-spec:
 name: Gtk3
 requires:
   Cairo::GObject: 1.000
-  Glib::Object::Introspection: 0.002
-version: 0.005
+  Glib: 1.260
+  Glib::Object::Introspection: 0.009
+version: 0.006
