@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.005
+version = 0.006
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
@@ -15,8 +15,9 @@ copyright_year = 2011
 [PkgVersion]
 
 [Prereqs]
+Glib = 1.260
 Cairo::GObject = 1.000
-Glib::Object::Introspection = 0.002
+Glib::Object::Introspection = 0.009
 
 [NextRelease]
 filename = NEWS
